--- a/bbs/App/Home/View/Login/index.html
+++ b/bbs/App/Home/View/Login/index.html
@@ -1,65 +1,3 @@
-<!DOCTYPE html>
-<html>
-  
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <title>
-      登入 - Fly社区
-    </title>
-    <link rel="stylesheet" href="//at.alicdn.com/t/font_mqhl04idhqx8byb9.css">
-    <link rel="stylesheet" href="__PUBLIC__/layui/css/layui.css">
-    <link rel="stylesheet" href="__PUBLIC__/css/global1.css">
-   
-  </head>
-  
-  <body>
-    <div class="header">
-      <div class="main">
-        <a class="logo" href="/" title="Fly">
-          Fly社区
-        </a>
-        <div class="nav">
-          <a href="/jie/">
-            <i class="iconfont icon-wenda">
-            </i>
-            讨论
-          </a>
-          <a href="/case/2017/">
-            <i class="iconfont icon-iconmingxinganli" style="top: 2px;">
-            </i>
-            案例
-          </a>
-          <a href="http://www.layui.com/">
-            <i class="iconfont icon-ui">
-            </i>
-            框架
-          </a>
-        </div>
-        <div class="nav-user">
-          <a class="unlogin" href="/user/login/">
-            <i class="iconfont icon-touxiang">
-            </i>
-          </a>
-          <span>
-            <a href="/user/login/">
-              登入
-            </a>
-            <a href="/user/reg/">
-              注册
-            </a>
-          </span>
-          <p class="out-login">
-            <a href="http://fly.layui.com/app/qq" onclick="layer.msg('正在通过QQ登入', {icon:16, shade: 0.1, time:0})"
-            class="iconfont icon-qq" title="QQ登入">
-            </a>
-            <a href="http://fly.layui.com/app/weibo/" onclick="layer.msg('正在通过微博登入', {icon:16, shade: 0.1, time:0})"
-            class="iconfont icon-weibo" title="微博登入">
-            </a>
-          </p>
-        </div>
-      </div>
-    </div>
     <div class="main layui-clear">
       <div class="fly-panel fly-panel-user" pad20>
         <div class="layui-tab layui-tab-brief" lay-filter="user">
@@ -68,7 +6,7 @@
               登入
             </li>
             <li>
-              <a href="../Reg/index">
+              <a href="{:U('home/reg/index')}">
                 注册
               </a>
             </li>
@@ -137,30 +75,7 @@
         </div>
       </div>
     </div>
-    <div class="footer">
-      <p>
-        <a href="http://fly.layui.com/">
-          Fly社区
-        </a>
-        2017 &copy;
-        <a href="http://www.layui.com/">
-          layui.com
-        </a>
-      </p>
-      <p>
-        <a href="http://fly.layui.com/jie/3147.html" target="_blank">
-          产品授权
-        </a>
-        <a href="http://fly.layui.com/jie/8157.html" target="_blank">
-          获取Fly社区模版
-        </a>
-        <a href="http://fly.layui.com/jie/2461.html" target="_blank">
-          微信公众号
-        </a>
-      </p>
-    </div>
-    <script src="__PUBLIC__/layui/layui.js">
-    </script>
+    
         	<script>
         //Demo
   layui.use(['layer', 'form','jquery'], function(){
@@ -171,23 +86,28 @@
 
                 //监听提交
                  form.on('submit(login)', function(data){
-                 layer.msg(JSON.stringify(data.field));
-                    $.ajax({
-                        url: '{:U("home/login/checkdata")}',
-                        type: 'POST',
-                        dataType: 'json',
-                        data: data.field,
-                    })
-                    .done(function() {
-                       console.log("success");
-                    })
-                    .fail(function() {
-                        console.log("error");
-                    })
-                    
 
-                    return false;
-                });
+                  $.ajax({
+                    url: '{:U('home/login/checkdata')}',
+                    type: 'POST',
+                    dataType: 'json',
+                    data: data.field,
+                  })
+                  .done(function(res) {
+                     if(res.error==1){
+                        layer.msg(res.info,function(){});
+                     }else{
+                        layer.alert(res.info, {icon: 6},function(){
+                            location.href="{:U('home/set/index')}";
+                        });
+                     }
+                  })
+                  .fail(function() {
+                    console.log("error");
+                  })
+
+                  return false;
+                          });
 
             });
 
