--- a/bbs/App/Home/View/Set/index.html
+++ b/bbs/App/Home/View/Set/index.html
@@ -56,7 +56,7 @@ window.onload=function(){
           </a>
         </li>
         <li class="layui-nav-item ">
-          <a href="/user/message/">
+          <a href="{:U('home/news/index')}">
             <i class="layui-icon">
               &#xe611;
             </i>
@@ -64,7 +64,7 @@ window.onload=function(){
           </a>
         </li>
         <li class="layui-nav-item ">
-          <a href="/auth/get/">
+          <a href="{:U('home/clear/index')}">
             <i class="layui-icon">
               &#xe61e;
             </i>
