--- a/bbs/App/Home/View/User/index.html
+++ b/bbs/App/Home/View/User/index.html
@@ -25,7 +25,7 @@
       </a>
     </li>
     <li class="layui-nav-item ">
-      <a href="/user/message/">
+      <a href="{:U('home/news/index')}">
         <i class="layui-icon">
           
         </i>
@@ -33,7 +33,7 @@
       </a>
     </li>
     <li class="layui-nav-item ">
-      <a href="/auth/get/">
+      <a href="{:U('home/clear/index')}">
         <i class="layui-icon">
           
         </i>
@@ -62,7 +62,7 @@
         <li data-type="mine-jie" lay-id="index" class="layui-this">
           我发的帖（
           <span>
-            0
+          <?php echo $num[0]['t1']; ?>
           </span>
           ）
         </li>
@@ -78,7 +78,24 @@
         <div class="layui-tab-item layui-show">
           <ul class="mine-view jie-row">
             <div class="fly-msg">
-              没有相关数据
+            <?php if ($Ucard) { ?>
+              
+             <?php  echo "没有相关数据"; ?>
+           <?php }else{ ?>
+               <?php foreach ($Ucarde as $carde) { ?>
+                 <ul class="mine-view jie-row">
+                      <li>
+                        <a class="jie-title" href="/jie/12206/" target="_blank"><?php echo $carde['title']; ?></a>
+                        <i>2017/8/3 上午8:49:52</i>
+                        <a class="mine-edit" href="/jie/edit/12206">编辑</a>
+                        <em>1阅/0答</em>
+                      </li>
+                  </ul>
+               <?php } ?>
+              
+
+         <?php  } ?>
+
             </div>
           </ul>
           <div id="LAY_page">
