--- a/bbs/App/Home/View/User/index.html
+++ b/bbs/App/Home/View/User/index.html
@@ -78,24 +78,20 @@
         <div class="layui-tab-item layui-show">
           <ul class="mine-view jie-row">
             <div class="fly-msg">
-            <?php if ($Ucard) { ?>
-              
-             <?php  echo "没有相关数据"; ?>
+           <ul class="mine-view jie-row">
+           <?php if (!$Ucard) { ?>
+              <?php  echo "<div class=\"fly-msg\">没有相关数据</div>"; ?>  
            <?php }else{ ?>
-               <?php foreach ($Ucarde as $carde) { ?>
-                 <ul class="mine-view jie-row">
-                      <li>
-                        <a class="jie-title" href="/jie/12206/" target="_blank"><?php echo $carde['title']; ?></a>
-                        <i>2017/8/3 上午8:49:52</i>
-                        <a class="mine-edit" href="/jie/edit/12206">编辑</a>
-                        <em>1阅/0答</em>
-                      </li>
-                  </ul>
-               <?php } ?>
-              
-
+              <?php foreach ($Ucard as $carde) { ?>
+                <li>
+                   <a class="jie-title" href="{:U('home/jie/index',array('id'=>$carde['qid']))}" target="_blank"><?php echo $carde['title']; ?></a>
+                    <i><?php echo Ctime($carde['create_time']); ?></i>
+                    <a class="mine-edit" href="/jie/edit/12206">编辑</a>
+                    <em><?php echo $carde['view_num']; ?>/<?php echo $carde['answer_num']; ?></em>
+                </li>
+            <?php } ?>  
          <?php  } ?>
-
+           </ul>
             </div>
           </ul>
           <div id="LAY_page">
