问题单个删除

--- a/bbs/App/Admin/View/Index/index.html
+++ b/bbs/App/Admin/View/Index/index.html
@@ -41,7 +41,7 @@
                                 </dd>
                                 <dd class="">
                                     <dd class="">
-                                        <a href="javascript:;" _href="./question-del.html">
+                                        <a href="javascript:;" _href="{:U('admin/question/dele')}">
                                             <cite>删除问题</cite>
                                         </a>
                                     </dd>
