--- a/bbs/App/Admin/View/Question/dele.html
+++ b/bbs/App/Admin/View/Question/dele.html
@@ -1,25 +1,4 @@
-<?php if (!defined('THINK_PATH')) exit();?><!DOCTYPE html>
-<html>
-    
-    <head>
-        <meta charset="utf-8">
-        <title>
-            X-admin v1.0
-        </title>
-        <meta name="renderer" content="webkit">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-        <link rel="shortcut icon" href="/GetName/bbs/Public/admin/images/favicon.ico" type="image/x-icon" />
-        <meta name="apple-mobile-web-app-status-bar-style" content="black">
-        <meta name="apple-mobile-web-app-capable" content="yes">
-        <meta name="format-detection" content="telephone=no">
-        <link rel="stylesheet" href="/GetName/bbs/Public/admin/css/x-admin.css" media="all">
-        <script src="/GetName/bbs/Public/admin/lib/layui/layui.js" charset="utf-8">
-        </script>
-        <script src="/GetName/bbs/Public/admin/js/x-admin.js"></script>
-        <script src="/GetName/bbs/Public/admin/js/x-layui.js"></script>
-    </head>
-      <body>
+ <body>
         <div class="x-nav">
             <span class="layui-breadcrumb">
               <a><cite>首页</cite></a>
@@ -48,7 +27,7 @@
                   </div>
                 </div> 
             </form>
-            <xblock><button class="layui-btn layui-btn-danger" onclick="delAll()"><i class="layui-icon">&#xe640;</i>批量删除</button><button class="layui-btn" onclick="question_add('添加问题','question-add.html','600','500')"><i class="layui-icon">&#xe608;</i>添加</button><span class="x-right" style="line-height:40px">共有数据： <?php echo count($question); ?>   条</span></xblock>
+            <xblock><button class="layui-btn layui-btn-danger" onclick="delAll()"><i class="layui-icon">&#xe640;</i>批量删除</button><span class="x-right" style="line-height:40px">共有数据：88 条</span></xblock>
             <table class="layui-table">
                 <thead>
                     <tr>
@@ -79,8 +58,8 @@
                     </tr>
                 </thead>
                 <tbody>
-                   <?php foreach ($question as $row) { ?>
-                       <tr>
+                    <?php foreach ($question as $row) { ?>
+                        <tr>
                         <td>
                             <input type="checkbox" value="1" name="">
                         </td>
@@ -88,11 +67,9 @@
                             <?php echo $row['qid']; ?>
                         </td>
                         <td>
-                            <a href="<?php echo U('home/jie/index',array('id'=>$row['qid']));?>" target="_blank">
-                              <u style="cursor:pointer" onclick="question_show()">
-                              <?php echo $row['title']; ?>
-                              </u>
-                            </a>
+                            <u style="cursor:pointer" onclick="question_show()">
+                                <?php echo $row['title']; ?>
+                            </u>
                         </td>
                         <td >
                             <?php echo $row['cname']; ?>
@@ -107,23 +84,21 @@
                             <?php echo $row['view_num']; ?>
                         </td>
                         <td class="td-manage">
-                            <a title="编辑" href="javascript:;" onclick="question_edit('编辑','<?php echo U('admin/question/editl',array('id'=>$row['qid']));?>','4','','510')"
-                            class="ml-5" style="text-decoration:none">
-                                <i class="layui-icon">&#xe642;</i>
+                            <a style="text-decoration:none" onclick="question_recover(this,<?php echo $row['qid'] ?>)" href="javascript:;" title="恢复">
+                                <i class="layui-icon">&#xe618;</i>
                             </a>
-                            <a class="dele" title="删除" href="javascript:;" onclick="question_del(this,<?php echo $row['qid'] ?>)" 
+                            <a title="删除" href="javascript:;" onclick="question_del(this,<?php echo $row['qid']; ?>)" 
                             style="text-decoration:none">
                                 <i class="layui-icon">&#xe640;</i>
                             </a>
                         </td>
                     </tr>
-                  <?php } ?>
+                    <?php } ?>
                 </tbody>
             </table>
-
             <div id="page"></div>
         </div>
-        <script>
+            <script>
             layui.use(['laydate','element','laypage','layer'], function(){
                 $ = layui.jquery;//jquery
               laydate = layui.laydate;//日期插件
@@ -179,44 +154,53 @@
              }
 
              function question_show (argument) {
-
-
                 layer.msg('可以跳到前台具体问题页面',{icon:1,time:1000});
              }
-             /*添加*/
-            function question_add(title,url,w,h){
-                x_admin_show(title,url,w,h);
-            }
-            //编辑 
-           function question_edit (title,url,id,w,h) {
-                x_admin_show(title,url,w,h); 
+            
+            /*恢复*/
+            function question_recover(obj,qid){
+                layer.confirm('确认要恢复吗？',function(index){
+                    //发异步删除数据
+                    $.ajax({
+                        url: '{:U('admin/question/recover')}',
+                        type: 'post',
+                        dataType: 'json',
+                        data: {qid: qid},
+                    })
+                    .done(function(res) {
+                        console.log("success");
+                        if (res.error==0) {
+                            $(obj).parents("tr").remove();
+                            layer.msg('恢复失败!',{icon:1,time:1000});
+                        }else{
+                            $(obj).parents("tr").remove();
+                            layer.msg('已正常显示!',{icon:1,time:1000});
+                        };
+
+                    })
+                    
+
+                    
+                });
             }
 
             /*删除*/
-            function question_del(obj,id){ //点击执行删除的方法
-              
+            function question_del(obj,qid){
                 layer.confirm('确认要删除吗？',function(index){
                     //发异步删除数据
-                    // uid = $(this).attr('uid');
+                   $.ajax({
+                       url: '{:U('admin/question/qdel')}',
+                       type: 'post',
+                       dataType: 'json',
+                       data: {qid: qid},
+                   })
+                   .done(function(res) {
+                       if (res.error==0) {
+                            $(obj).parents("tr").remove();
+                            layer.msg('已删除!',{icon:1,time:1000});
+                       };
 
-                    $.ajax({
-                      url: '<?php echo U('admin/question/delel');?>',
-                      type: 'post',
-                      dataType: 'json',
-                      data: {qid: id},
-                    })
-                    .done(function(res) {
-                      if (res.error==0) {
-                        $(obj).parents("tr").remove();
-                        layer.msg('已删除!',{icon:1,time:1000},);
-
-                        }else{
-
-                        $(obj).parents("tr").remove();
-                        layer.msg('显示正常!',{icon:1,time:1000},);
-                        };
-                    })
-              
+                   })
 
                     
                 });
