--- a/bbs/App/Admin/View/User/admin_list.html
+++ b/bbs/App/Admin/View/User/admin_list.html
@@ -1,14 +1,14 @@
-  <body>
+   <body>
         <div class="x-nav">
             <span class="layui-breadcrumb">
               <a><cite>首页</cite></a>
               <a><cite>会员管理</cite></a>
-              <a><cite>问题/资讯列表</cite></a>
+              <a><cite>管理员列表</cite></a>
             </span>
             <a class="layui-btn layui-btn-small" style="line-height:1.6em;margin-top:3px;float:right"  href="javascript:location.replace(location.href);" title="刷新"><i class="layui-icon" style="line-height:30px">ဂ</i></a>
         </div>
         <div class="x-body">
-            <form class="layui-form x-center" action="" style="width:800px">
+            <form class="layui-form x-center" action="" style="width:80%">
                 <div class="layui-form-pane" style="margin-top: 15px;">
                   <div class="layui-form-item">
                     <label class="layui-form-label">日期范围</label>
@@ -19,7 +19,7 @@
                       <input class="layui-input" placeholder="截止日" id="LAY_demorange_e">
                     </div>
                     <div class="layui-input-inline">
-                      <input type="text" name="username"  placeholder="标题" autocomplete="off" class="layui-input">
+                      <input type="text" name="username"  placeholder="请输入登录名" autocomplete="off" class="layui-input">
                     </div>
                     <div class="layui-input-inline" style="width:80px">
                         <button class="layui-btn"  lay-submit="" lay-filter="sreach"><i class="layui-icon">&#xe615;</i></button>
@@ -27,30 +27,33 @@
                   </div>
                 </div> 
             </form>
-            <xblock><button class="layui-btn layui-btn-danger" onclick="delAll()"><i class="layui-icon">&#xe640;</i>批量删除</button><button class="layui-btn" onclick="question_add('添加问题','{:U('home/jie/add')}','600','500')"><i class="layui-icon">&#xe608;</i>添加</button><span class="x-right" style="line-height:40px">共有数据： <?php echo count($question); ?>   条</span></xblock>
+            <xblock><button class="layui-btn layui-btn-danger" onclick="delAll()"><i class="layui-icon">&#xe640;</i>批量删除</button><button class="layui-btn" onclick="admin_add('添加用户','admin-add.html','600','500')"><i class="layui-icon">&#xe608;</i>添加</button><span class="x-right" style="line-height:40px">共有数据：88 条</span></xblock>
             <table class="layui-table">
                 <thead>
                     <tr>
                         <th>
-                            <input id="all" type="checkbox" name="" value="">
+                            <input type="checkbox" name="" value="">
                         </th>
                         <th>
                             ID
                         </th>
                         <th>
-                            标题
+                            登录名
                         </th>
                         <th>
-                            分类
+                            手机
                         </th>
                         <th>
-                            来源
+                            邮箱
                         </th>
                         <th>
-                            更新时间
+                            角色
                         </th>
                         <th>
-                            浏览次数
+                            加入时间
+                        </th>
+                        <th>
+                            状态
                         </th>
                         <th>
                             操作
@@ -58,50 +61,53 @@
                     </tr>
                 </thead>
                 <tbody>
-                   <?php foreach ($question as $row) { ?>
-                       <tr>
+                    <tr>
                         <td>
-                            <input class="son" type="checkbox" value="<?php echo $row['qid']; ?>" name="">
-                        </td>
-                        <td>
-                            <?php echo $row['qid']; ?>
+                            <input type="checkbox" value="1" name="">
                         </td>
                         <td>
-                            <a href="{:U('home/jie/index',array('id'=>$row['qid']))}" target="_blank">
-                              <u style="cursor:pointer" onclick="question_show()">
-                              <?php echo $row['title'];  ?>
-                              </u>
-                            </a>
+                            1
+                        </td>
+                        <td>
+                            admin
                         </td>
                         <td >
-                            <?php echo $row['cname']; ?>
+                            18925139194
                         </td>
                         <td >
-                            <?php echo $row['nickname']; ?>
+                            113664000@qq.com
                         </td>
                         <td >
-                            <?php echo Ctime($row['create_time']); ?>
+                            超级管理员
                         </td>
-                        <td >
-                            <?php echo $row['view_num']; ?>
+                        <td>
+                            2017-01-01 11:11:42
+                        </td>
+                        <td class="td-status">
+                            <span class="layui-btn layui-btn-normal layui-btn-mini">
+                                已启用
+                            </span>
                         </td>
                         <td class="td-manage">
-                            <a title="编辑" href="javascript:;" onclick="question_edit('编辑','{:U('admin/question/editl',array('id'=>$row['qid']))}','4','','510')"
+                            <a style="text-decoration:none" onclick="admin_stop(this,'10001')" href="javascript:;" title="停用">
+                                <i class="layui-icon">&#xe601;</i>
+                            </a>
+                            <a title="编辑" href="javascript:;" onclick="admin_edit('编辑','admin-edit.html','4','','510')"
                             class="ml-5" style="text-decoration:none">
                                 <i class="layui-icon">&#xe642;</i>
                             </a>
-                            <a class="dele" title="删除" href="javascript:;" onclick="question_del(this,<?php echo $row['qid'] ?>)" 
+                            <a title="删除" href="javascript:;" onclick="admin_del(this,'1')" 
                             style="text-decoration:none">
                                 <i class="layui-icon">&#xe640;</i>
                             </a>
                         </td>
                     </tr>
-                  <?php } ?>
                 </tbody>
             </table>
 
             <div id="page"></div>
         </div>
+
         <script>
             layui.use(['laydate','element','laypage','layer'], function(){
                 $ = layui.jquery;//jquery
@@ -111,13 +117,15 @@
               layer = layui.layer;//弹出层
 
               //以上模块根据需要引入
-              $('#all').click(function(event) {
-                    if ($(this).prop("checked")) {
-                        $('.son').prop("checked",true);
-                    }else{
-                        $('.son').prop("checked",false);
-                    };
-                 });
+
+              laypage({
+                cont: 'page'
+                ,pages: 100
+                ,first: 1
+                ,last: 100
+                ,prev: '<em><</em>'
+                ,next: '<em>></em>'
+              }); 
               
               var start = {
                 min: laydate.now()
@@ -146,83 +154,55 @@
                 end.elem = this
                 laydate(end);
               }
+              
             });
 
             //批量删除提交
              function delAll () {
                 layer.confirm('确认要删除吗？',function(index){
                     //捉到所有被选中的，发异步进行删除
-                    uids = '';
-
-                    for (var i = 0; i < $('.son:checked').length; i++) {
-                        uids+=$('.son:checked').eq(i).val();
-                        uids+=',';
-                    };
-
-                    $.ajax({
-                      url: '{:U('admin/question/deleAll3')}',
-                      type: 'post',
-                      dataType: 'json',
-                      data: {uids: uids},
-                    })
-                    .done(function(res) {
-                       if (res.error==0) {
-                             $('.son:checked').parents('tr').remove();
-                             // parent.location.reload();
-                            layer.msg('删除成功', {icon: 1});
-                            // var index = parent.layer.getFrameIndex(window.name);
-                            
-
-                        };
-                    })
-
+                    layer.msg('删除成功', {icon: 1});
                 });
              }
-
-             function question_show (argument) {
-
-
-                layer.msg('可以跳到前台具体问题页面',{icon:1,time:1000});
-             }
              /*添加*/
-            function question_add(title,url,w,h){
+            function admin_add(title,url,w,h){
                 x_admin_show(title,url,w,h);
             }
-            //编辑 
-           function question_edit (title,url,id,w,h) {
-                x_admin_show(title,url,w,h); 
+
+             /*停用*/
+            function admin_stop(obj,id){
+                layer.confirm('确认要停用吗？',function(index){
+                    //发异步把用户状态进行更改
+                    $(obj).parents("tr").find(".td-manage").prepend('<a style="text-decoration:none" onClick="admin_start(this,id)" href="javascript:;" title="启用"><i class="layui-icon">&#xe62f;</i></a>');
+                    $(obj).parents("tr").find(".td-status").html('<span class="layui-btn layui-btn-disabled layui-btn-mini">已停用</span>');
+                    $(obj).remove();
+                    layer.msg('已停用!',{icon: 5,time:1000});
+                });
             }
 
+            /*启用*/
+            function admin_start(obj,id){
+                layer.confirm('确认要启用吗？',function(index){
+                    //发异步把用户状态进行更改
+                    $(obj).parents("tr").find(".td-manage").prepend('<a style="text-decoration:none" onClick="admin_stop(this,id)" href="javascript:;" title="停用"><i class="layui-icon">&#xe601;</i></a>');
+                    $(obj).parents("tr").find(".td-status").html('<span class="layui-btn layui-btn-normal layui-btn-mini">已启用</span>');
+                    $(obj).remove();
+                    layer.msg('已启用!',{icon: 6,time:1000});
+                });
+            }
+            //编辑
+            function admin_edit (title,url,id,w,h) {
+                x_admin_show(title,url,w,h); 
+            }
             /*删除*/
-            function question_del(obj,id){ //点击执行删除的方法
-              
+            function admin_del(obj,id){
                 layer.confirm('确认要删除吗？',function(index){
                     //发异步删除数据
-                    // uid = $(this).attr('uid');
-
-                    $.ajax({
-                      url: '{:U('admin/question/delel')}',
-                      type: 'post',
-                      dataType: 'json',
-                      data: {qid: id},
-                    })
-                    .done(function(res) {
-                      if (res.error==0) {
-                        $(obj).parents("tr").remove();
-                        layer.msg('已删除!',{icon:1,time:1000},);
-
-                        }else{
-
-                        $(obj).parents("tr").remove();
-                        layer.msg('显示正常!',{icon:1,time:1000},);
-                        };
-                    })
-              
-
-                    
+                    $(obj).parents("tr").remove();
+                    layer.msg('已删除!',{icon:1,time:1000});
                 });
             }
             </script>
-         
+
     </body>
 </html>
